--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +40,66 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+body{
+  height: 100vh;
+  background-color: #fefae0;
+}
+
+.home-container{
+  background-color: #fefae0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.container{
+  background-color: #faedcd;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0;
+  padding: 0;
+}
+.container1{
+  background-color: #e9edc9;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.container2{
+  background-color: #ccd5ae;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.container3{
+  background-color: #D4a373;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: white;
+}
+.container4{
+  background-color: #F2debb;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.container5{
+  background-color: #bdc79e;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.tertiary-color{
+  background-color: #F2debb;
+}
+
+/* -------------- Nav ------------ */
+Nav{
+  font-weight: bold;
 }
