--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,11 @@ body{
   background-color: #fefae0;
 }
 
+button{
+  width: 100px;
+  /* height: 50px; */
+}
+
 .home-container{
   background-color: #fefae0;
   display: flex;
@@ -112,9 +117,9 @@ Nav{
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-top: 5vh;
   align-items: center;
   justify-content: center;
+  margin: 5vh 0 5vh;
 }
 
 .searchbar{
@@ -140,6 +145,8 @@ Nav{
   height: 50vh;
   width: 40vh;
   min-Width: 200px;
-  margin: 2%;
+  margin: 5px;
   border: solid gray 1px;
+  border-radius: 0;
 }
+
