--- a/src/App.css
+++ b/src/App.css
@@ -153,3 +153,33 @@ Nav{
 .card-link{
   text-decoration: none;
 }
+
+/* SPECIES PAGE */
+
+.species-header{
+  margin: 2% 5% 2%;
+}
+.species-image-container{
+  height: 75vh;
+  /* background-size: contain;
+  background-repeat: no-repeat;
+  object-fit: contain; */
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  /* background-color: grey; */
+}
+.species-image-container img{
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+}
+
+
+.grid-even-columns{
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 40% 1fr;
+  margin: 0 5% 0;
+}
