--- a/src/App.css
+++ b/src/App.css
@@ -160,7 +160,7 @@ Nav{
   margin: 2% 5% 2%;
 }
 .species-image-container{
-  height: 75vh;
+  height: auto;
   /* background-size: contain;
   background-repeat: no-repeat;
   object-fit: contain; */
@@ -175,11 +175,20 @@ Nav{
   width: auto;
   height: auto;
 }
-
+.species-info-container{
+  background-color: ;
+}
 
 .grid-even-columns{
   display: grid;
   gap: 1rem;
-  grid-template-columns: 40% 1fr;
+  grid-template-columns: 1fr 2fr;
   margin: 0 5% 0;
+}
+
+@media only screen and (max-width: 550px){
+  .grid-even-columns{
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
