--- a/src/App.css
+++ b/src/App.css
@@ -62,10 +62,10 @@ body{
   /* background-color: #fefae0; */
 }
 
-button{
+/* button{
   width: 100px;
   /* height: 50px; */
-}
+/* } */
 
 
 .promo-font{
@@ -88,10 +88,10 @@ button{
 .home-container{
   /* background-color: #fefae0; */
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-.container{
+.container0{
   /* background-color: #faedcd; */
   display: flex;
   flex-direction: column;
@@ -149,11 +149,11 @@ button{
 .off-white{
   background-color: hsl(0, 0%, 95%);
 }
-.green{
+.flora-green{
   background-color: #79d9af;
   color: #79d9af;
 }
-.green-text{
+.flora-green-text{
   color: #79d9af;
 }
 
@@ -192,10 +192,13 @@ Nav{
   margin: 5vh 0 5vh;
 }
 
-.searchbar{
+.searchbar-container{
   width: 80vw;
 }
 
+Form.Control{
+  width: 80vw;
+}
 .results-container{
   display: flex;
   flex-direction: row;
@@ -211,7 +214,7 @@ Nav{
   isolation: isolate; */
 }
 
-.card{
+.plant-card{
   height: 50vh;
   width: 40vh;
   min-Width: 200px;
@@ -224,7 +227,7 @@ Nav{
   text-decoration: none;
 }
 
-/* SPECIES PAGE */
+/* --------------------SPECIES PAGE --------------------------*/
 
 .species-header{
   margin: 2% 5% 2%;
@@ -262,6 +265,24 @@ Nav{
     grid-template-columns: 1fr;
   }
 }
+
+/*--------------------- Profile Page ----------------------------------*/
+.profile-head {
+  transform: translateY(5rem)
+}
+
+.cover {
+  background-image: url(https://images.unsplash.com/photo-1530305408560-82d13781b33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);
+  background-size: cover;
+  background-repeat: no-repeat
+}
+
+/* body {
+  background: #654ea3;
+  background: linear-gradient(to right, #e96443, #904e95);
+  min-height: 100vh;
+  overflow-x:hidden;
+} */
 
 
 /* ---------------- Error Handling ------------------ */
