cleaned up font on  species page

--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,7 @@ Form.Control{
   align-items: center;
   justify-content: center;
   margin: 2% 0 0;
+  /* background-color: #f8f9fa; */
   /* background-repeat: no-repeat;
   background-size: cover;
   background-repeat: no-repeat;
